[gd_scene load_steps=12 format=3 uid="uid://x4lks0bja3df"]

[ext_resource type="Script" path="res://scripts/boss/boss.gd" id="1_73dyt"]
[ext_resource type="Texture2D" uid="uid://bee5st1vklngl" path="res://sprites/Created/pBirdBoss3.png" id="2_hctc8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6gucd"]
atlas = ExtResource("2_hctc8")
region = Rect2(0, 0, 100, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p2kx"]
atlas = ExtResource("2_hctc8")
region = Rect2(100, 0, 100, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uryp"]
atlas = ExtResource("2_hctc8")
region = Rect2(200, 0, 100, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg84h"]
atlas = ExtResource("2_hctc8")
region = Rect2(300, 0, 100, 59)

[sub_resource type="SpriteFrames" id="SpriteFrames_hmjcc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gucd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p2kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uryp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg84h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ansl7"]
size = Vector2(7, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w55ui"]
size = Vector2(7, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f6ua"]
size = Vector2(20, 102.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wfpth"]
size = Vector2(59, 25)

[node name="boss" type="CharacterBody2D"]
script = ExtResource("1_73dyt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hmjcc")
frame = 1

[node name="left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(36, -6)
shape = SubResource("RectangleShape2D_ansl7")

[node name="right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(-37, -5)
shape = SubResource("RectangleShape2D_w55ui")

[node name="Attack_cooldown" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 64.75)
shape = SubResource("RectangleShape2D_1f6ua")

[node name="Spawn" type="Marker2D" parent="."]

[node name="HItBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HItBox"]
shape = SubResource("RectangleShape2D_wfpth")

[node name="Take_Damage_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.0509804, 0.462745, 0, 1)
offset_left = -32.0
offset_top = -25.0
offset_right = 31.0
offset_bottom = -19.0
value = 100.0
show_percentage = false

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="HItBox" to="." method="_on_h_it_box_body_entered"]
[connection signal="body_exited" from="HItBox" to="." method="_on_h_it_box_body_exited"]
[connection signal="timeout" from="Take_Damage_Timer" to="." method="_on_take_damage_timer_timeout"]
